[package]
name = "aes-ccm"
description = """
A pure-Rust, #![no_std], zero-allocation AES-CCM implementation ported from
TinyCrypt using RustCrypto's AES.
"""
version = "0.2.2"
authors = [
    "Martin Disch <martindisch@gmail.com>",
    "Arnaud Durand <arnaud.durand@unifr.ch>"
]
repository = "https://github.com/martindisch/aes-ccm"
readme = "README.md"
keywords = ["aead"]
categories = ["cryptography", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
aes = "0.3.2"

[dev-dependencies]
hex-literal = "0.2.0"

[badges]
maintenance = { status = "passively-maintained" }
