[package]
name = "aes-ccm"
description = """
A pure-Rust, #![no_std], zero-allocation AES-CCM implementation ported from
TinyCrypt using RustCrypto's AES.
"""
version = "0.3.0"
authors = [
    "Martin Disch <martindisch@gmail.com>",
    "Arnaud Durand <arnaud.durand@unifr.ch>"
]
repository = "https://github.com/martindisch/aes-ccm"
readme = "README.md"
keywords = ["aead"]
categories = ["cryptography", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
aead = { version = "0.2", default-features = false }
aes = "0.3.2"
subtle = { version = "2", default-features = false }

[dev-dependencies]
hex-literal = "0.2.0"

[features]
default = ["alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[badges]
maintenance = { status = "passively-maintained" }
