[package]
name = "aes-ccm"
description = """
A pure-Rust, #![no_std], zero-allocation AES-CCM implementation ported from
TinyCrypt using RustCrypto's AES.
"""
version = "0.4.1"
authors = [
    "Martin Disch <martindisch@gmail.com>",
    "Tony Arcieri <bascule@gmail.com>",
    "Arnaud Durand <arnaud.durand@unifr.ch>"
]
repository = "https://github.com/martindisch/aes-ccm"
readme = "README.md"
keywords = ["aead"]
categories = ["cryptography", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
aead = { version = "0.3", default-features = false }
aes = { version = "0.4.0", optional = true }
block-cipher = { version = "0.7", default-features = false }
subtle = { version = "2", default-features = false }

[dev-dependencies]
hex-literal = "0.2.0"

[features]
default = ["aes", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
